# LocalLagrangeFunctions

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  README.md
include/kdtree/: kdtree.h
include/lagrange/: lagrange.h
include/local_lagrange/: local_lagrange.h  local_lagrange_assembler.h  local_lagrange_interpolant.h
include/math_utils/: math_tools.h  polynomials.h
include/rbf/: gaussian.h  interpolate.h  thin_plate_spline.h
src/lib/: CMakeLists.txt
src/lib/catch2/: CMakeLists.txt
src/lib/kdtree/: CMakeLists.txt  kdtree.h
src/lib/kdtree/test/: test_kdtree.cpp
src/lib/kdtree/tests/: CMakeLists.txt  kdtree_test.cpp
src/lib/lagrange_functions/tests/: CMakeLists.txt  lagrange_functions_speed_test.cpp  test_lagrange_functions.cpp
src/lib/local_lagrange/: CMakeLists.txt  Makefile  local_lagrange.cpp  local_lagrange.h  local_lagrange_assembler.cpp  local_lagrange_assembler.h  local_lagrange_interpolant.cpp  local_lagrange_interpolant.h  local_lagrange_template.cpp  local_lagrange_template.h
src/lib/local_lagrange/test/: CMakeLists.txt  Makefile  integration_test.cpp  lagrange_interpolant_test.cpp  lagrange_test.cpp  speed_template_test.cpp  speed_test.cpp  speed_test.h  test.cpp  test_template.cpp
src/lib/math_utils/: CMakeLists.txt  math_tools.cpp  math_tools.h
src/lib/math_utils/test/: CMakeLists.txt  math_test.cpp  polynomial_test.cpp
src/lib/radial_basis_functions/: CMakeLists.txt  gaussian.cpp  gaussian.h  interpolate.cpp  interpolate.h  thin_plate_spline.cpp
src/lib/radial_basis_functions/tests/: CMakeLists.txt  rbf_perf_test.cpp  rbf_test.cpp
src/scripts/: llf_integration_test.py  llf_test.py
tps/: README.md
