cmake_minimum_required (VERSION 2.6)
project (locallagrange)
subdirs(src)
enable_testing()
find_package(GTest REQUIRED)
find_package(Threads)
find_package(OpenMP)
include_directories(${GTEST_INCLUDE_DIRS})
SET(CMAKE_CXX_FLAGS "-std=c++11 -Wall -O2")
if (OPENMP_FOUND)
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
endif()
