set(lagrange_lib lagrange)
set(lagrange_hdr local_lagrange.h local_lagrange_template.h)
add_library(${lagrange_lib} local_lagrange.cpp local_lagrange_template.cpp ${lagrange_hdr})
FIND_PACKAGE(Boost)
FIND_PACKAGE(Armadillo)
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR} ${ARMADILLO_INCLUDE_DIRS})
target_link_libraries( lagrange ${ARMADILLO_LIBRARIES})
ADD_DEFINITIONS("-DHAS_BOOST")
subdirs(test)
