set(lagrange_lib lagrange)
set(lagrange_hdr local_lagrange.h local_lagrange_assembler.h local_lagrange_interpolant.h local_lagrange_template.h)
add_library(${lagrange_lib} local_lagrange.cpp local_lagrange_assembler.cpp local_lagrange_interpolant.cpp)
FIND_PACKAGE(Boost)
FIND_PACKAGE(Armadillo)
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR} ${ARMADILLO_INCLUDE_DIRS})
target_link_libraries( lagrange ${ARMADILLO_LIBRARIES} ${LAPACK_LIBRARIES})
ADD_DEFINITIONS("-DHAS_BOOST")
subdirs(test)
